# code-gen-client

./: .env.example  .gitignore  README.md  docker-compose.yml  gen_graphql_ops.py  main.py  pyproject.toml
docker/: Dockerfile
gql_client/: __init__.py  client.py  enums.py  input_types.py  mutation_send_raw_transaction.py  ping.py  query_eth_syncing.py  query_metadata.py  query_transactions.py  query_usage_stat.py  query_web_3_sha_3.py
graphql/: auto.graphql  ops.graphql
src/: app_factory.py
src/webui/: config.py  main.py  routes.py
src/webui/services/: __init__.py  graphql_service.py  operations.py
src/webui/static/: app.css
src/webui/templates/: base.html  index.html
src/webui/templates/partials/: result.html
